--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.5",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.2.4",
