--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sweetalert2": "^11.7.5",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.2.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
